--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.0.1">
-    <title>Satyam Sinha</title>
+    <title>Satyam's Blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
@@ -61,7 +61,7 @@
               <a class="nav-link" href="{% static 'Satyam Fresher 2019.pdf' %}">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+              <a class="nav-link  active" href="{% url 'allblogs' %}">Blog</a>
             </li>
           </ul>
         </div>
@@ -69,33 +69,25 @@
 </header>
 
 <main role="main">
+  <div class="container">
 
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1>Hi, I'm Satyam.</h1>
-      <p class="lead text-muted">Hey my name is Satyam Sinha and I love to make Django websites. It's the thrill of handling the requests that the people want!</p>
-      <p>
-        <a href="mailto:satyamloyola@gmail.com" class="btn btn-primary my-2">Email Me</a>
-      </p>
-      <img src="{% static 'satyam.jpg' %}" height="300" />
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">
-        {% for job in jobs.all %}
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="{{ job.image.url }}" />
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
+  <h1 class="text-center pt-3">Welcome to Satyam's Blog</h1>
+  <br />
+  <br />
+  <h2>Latest Posts</h2>
+  <hr />
+  
+  {% for blog in blogs.all %}
+  <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+  {{ blog.pub_date_preety }}
+  <br />
+  <img class="img-fluid" src="{{ blog.image.url }}" height=200 width=200/>
+  <br />
+  <p>{{ blog.summary }}</p>
+  {% endfor %}
   </div>
+
+      
 
 </main>
 
